--- a/easydb/platform/msvc2008/projects/easydb_cl.vcproj
+++ b/easydb/platform/msvc2008/projects/easydb_cl.vcproj
@@ -263,6 +263,14 @@
 			Name="commands"
 			>
 			<File
+				RelativePath="..\..\..\src\easydb\AddFrameSprite.cpp"
+				>
+			</File>
+			<File
+				RelativePath="..\..\..\src\easydb\AddFrameSprite.h"
+				>
+			</File>
+			<File
 				RelativePath="..\..\..\src\easydb\ChangeJsonFile.cpp"
 				>
 			</File>
@@ -300,6 +308,14 @@
 			</File>
 			<File
 				RelativePath="..\..\..\src\easydb\ReverseAnimation.h"
+				>
+			</File>
+			<File
+				RelativePath="..\..\..\src\easydb\ScaleOverall.cpp"
+				>
+			</File>
+			<File
+				RelativePath="..\..\..\src\easydb\ScaleOverall.h"
 				>
 			</File>
 			<File
