--- a/sg/res/config.json
+++ b/sg/res/config.json
@@ -881,5 +881,197 @@
 		"traps" : 
 		[
 		]
-	}
+	},
+	"amount" : 
+	[
+		{
+			"Troop Housing" : 1,
+			"Elixir Storage" : 1,
+			"Gold Storage" : 1,
+			"Elixir Pump" : 1,
+			"Gold Mine" : 1,
+			"Barrack" : 1,
+			"Cannon" : 2,
+			"Worker Building" : 5
+		},
+		{
+			"Troop Housing" : 1,
+			"Elixir Storage" : 1,
+			"Gold Storage" : 1,
+			"Elixir Pump" : 2,
+			"Gold Mine" : 2,
+			"Barrack" : 2,
+			"Cannon" : 2,
+			"Wall" : 25,
+			"Archer Tower" : 1,
+			"Mine" : 2,
+			"Worker Building" : 5
+		},
+		{
+			"Troop Housing" : 2,
+			"Elixir Storage" : 2,
+			"Gold Storage" : 2,
+			"Elixir Pump" : 3,
+			"Gold Mine" : 3,
+			"Barrack" : 2,
+			"Cannon" : 2,
+			"Wall" : 50,
+			"Archer Tower" : 1,
+			"Mortar" : 1,
+			"Alliance Castle" : 1,
+			"Mine" : 2,
+			"Worker Building" : 5,
+			"Laboratory" : 1
+		},
+		{
+			"Troop Housing" : 2,
+			"Elixir Storage" : 2,
+			"Gold Storage" : 2,
+			"Elixir Pump" : 4,
+			"Gold Mine" : 4,
+			"Barrack" : 3,
+			"Cannon" : 2,
+			"Wall" : 75,
+			"Archer Tower" : 2,
+			"Air Defense" : 1,
+			"Mortar" : 1,
+			"Alliance Castle" : 1,
+			"Ejector" : 2,
+			"Mine" : 2,
+			"Worker Building" : 5,
+			"Laboratory" : 1
+		},
+		{
+			"Troop Housing" : 3,
+			"Elixir Storage" : 2,
+			"Gold Storage" : 2,
+			"Elixir Pump" : 5,
+			"Gold Mine" : 5,
+			"Barrack" : 3,
+			"Cannon" : 3,
+			"Wall" : 100,
+			"Archer Tower" : 3,
+			"Wizard Tower" : 1,
+			"Air Defense" : 1,
+			"Mortar" : 1,
+			"Alliance Castle" : 1,
+			"Ejector" : 2,
+			"Mine" : 4,
+			"Worker Building" : 5,
+			"Laboratory" : 1,
+			"Spell Forge" : 1,
+			"AirTrap" : 2
+		},
+		{
+			"Troop Housing" : 3,
+			"Elixir Storage" : 2,
+			"Gold Storage" : 2,
+			"Elixir Pump" : 6,
+			"Gold Mine" : 6,
+			"Barrack" : 3,
+			"Cannon" : 3,
+			"Wall" : 125,
+			"Archer Tower" : 3,
+			"Wizard Tower" : 2,
+			"Air Defense" : 1,
+			"Mortar" : 2,
+			"Alliance Castle" : 1,
+			"Ejector" : 4,
+			"Superbomb" : 1,
+			"Mine" : 4,
+			"Worker Building" : 5,
+			"Laboratory" : 1,
+			"Spell Forge" : 1,
+			"AirTrap" : 2
+		},
+		{
+			"Troop Housing" : 4,
+			"Elixir Storage" : 2,
+			"Gold Storage" : 2,
+			"Elixir Pump" : 6,
+			"Gold Mine" : 6,
+			"Barrack" : 4,
+			"Cannon" : 5,
+			"Wall" : 175,
+			"Archer Tower" : 4,
+			"Wizard Tower" : 2,
+			"Air Defense" : 2,
+			"Mortar" : 3,
+			"Alliance Castle" : 1,
+			"Ejector" : 4,
+			"Superbomb" : 2,
+			"Mine" : 6,
+			"Worker Building" : 5,
+			"Laboratory" : 1,
+			"Tesla Tower" : 2,
+			"Spell Forge" : 1,
+			"Hero Altar Barbarian King" : 1,
+			"Dark Elixir Pump" : 1,
+			"Dark Elixir Storage" : 1,
+			"AirTrap" : 2,
+			"MegaAirTrap" : 1,
+			"Dark Elixir Barrack" : 1
+		},
+		{
+			"Troop Housing" : 4,
+			"Elixir Storage" : 3,
+			"Gold Storage" : 3,
+			"Elixir Pump" : 6,
+			"Gold Mine" : 6,
+			"Barrack" : 4,
+			"Cannon" : 5,
+			"Wall" : 225,
+			"Archer Tower" : 5,
+			"Wizard Tower" : 3,
+			"Air Defense" : 3,
+			"Mortar" : 3,
+			"Alliance Castle" : 1,
+			"Ejector" : 6,
+			"Superbomb" : 3,
+			"Mine" : 6,
+			"Worker Building" : 5,
+			"Laboratory" : 1,
+			"Tesla Tower" : 3,
+			"Spell Forge" : 1,
+			"Hero Altar Barbarian King" : 1,
+			"Dark Elixir Pump" : 1,
+			"Dark Elixir Storage" : 1,
+			"Hero Altar Archer Queen" : 1,
+			"AirTrap" : 4,
+			"MegaAirTrap" : 2,
+			"Dark Elixir Barrack" : 2
+		},
+		{
+			"Troop Housing" : 4,
+			"Elixir Storage" : 4,
+			"Gold Storage" : 4,
+			"Elixir Pump" : 6,
+			"Gold Mine" : 6,
+			"Barrack" : 4,
+			"Cannon" : 5,
+			"Wall" : 250,
+			"Archer Tower" : 6,
+			"Wizard Tower" : 4,
+			"Air Defense" : 4,
+			"Mortar" : 3,
+			"Alliance Castle" : 1,
+			"Ejector" : 6,
+			"Superbomb" : 4,
+			"Mine" : 6,
+			"Worker Building" : 5,
+			"Laboratory" : 1,
+			"Tesla Tower" : 4,
+			"Spell Forge" : 1,
+			"Bow" : 2,
+			"Hero Altar Barbarian King" : 1,
+			"Dark Elixir Pump" : 2,
+			"Dark Elixir Storage" : 1,
+			"Hero Altar Archer Queen" : 1,
+			"Hero Altar XiYu" : 1,
+			"Hero Altar YiNi" : 1,
+			"AirTrap" : 4,
+			"MegaAirTrap" : 4,
+			"Dark Elixir Barrack" : 2
+		}
+	]
 }
