[ADDED] 墙连续paste，paste时画出底部

--- a/sg/platform/msvc2008/projects/sg.vcproj
+++ b/sg/platform/msvc2008/projects/sg.vcproj
@@ -322,6 +322,18 @@
 				</File>
 			</Filter>
 		</Filter>
+		<Filter
+			Name="tools"
+			>
+			<File
+				RelativePath="..\..\..\src\sg\SymbolRender.cpp"
+				>
+			</File>
+			<File
+				RelativePath="..\..\..\src\sg\SymbolRender.h"
+				>
+			</File>
+		</Filter>
 	</Files>
 	<Globals>
 	</Globals>
