[ADDED] 调整墙的组合

--- a/sg/platform/msvc2008/projects/sg.vcproj
+++ b/sg/platform/msvc2008/projects/sg.vcproj
@@ -341,6 +341,10 @@
 				RelativePath="..\..\..\src\sg\SymbolRender.h"
 				>
 			</File>
+			<File
+				RelativePath="..\..\..\src\sg\tools.h"
+				>
+			</File>
 		</Filter>
 	</Files>
 	<Globals>
