[ADDED] texture packer新算法

--- a/easypacker/platform/msvc2008/projects/easypacker.vcproj
+++ b/easypacker/platform/msvc2008/projects/easypacker.vcproj
@@ -202,6 +202,14 @@
 				>
 			</File>
 			<File
+				RelativePath="..\..\..\src\easypacker\BinaryTreeNewArrange.cpp"
+				>
+			</File>
+			<File
+				RelativePath="..\..\..\src\easypacker\BinaryTreeNewArrange.h"
+				>
+			</File>
+			<File
 				RelativePath="..\..\..\src\easypacker\DirectlyArrange.cpp"
 				>
 			</File>
