--- a/drag2d/platform/msvc2008/projects/libdrag2d.vcproj
+++ b/drag2d/platform/msvc2008/projects/libdrag2d.vcproj
@@ -1201,6 +1201,10 @@
 					>
 				</File>
 				<File
+					RelativePath="..\..\..\src\drag2d\common\PlayControl.h"
+					>
+				</File>
+				<File
 					RelativePath="..\..\..\src\drag2d\common\tools.h"
 					>
 				</File>
