--- a/easycomplex/platform/msvc2008/projects/libcomplex.vcproj
+++ b/easycomplex/platform/msvc2008/projects/libcomplex.vcproj
@@ -288,6 +288,26 @@
 					>
 				</File>
 			</Filter>
+			<Filter
+				Name="preview"
+				>
+				<File
+					RelativePath="..\..\..\src\libcomplex\PreviewCanvas.cpp"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\src\libcomplex\PreviewCanvas.h"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\src\libcomplex\PreviewDialog.cpp"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\src\libcomplex\PreviewDialog.h"
+					>
+				</File>
+			</Filter>
 		</Filter>
 	</Files>
 	<Globals>
