[ADDED] layout for label

--- a/drag2d/platform/msvc2008/projects/libdrag2d.vcproj
+++ b/drag2d/platform/msvc2008/projects/libdrag2d.vcproj
@@ -880,6 +880,14 @@
 					RelativePath="..\..\..\src\drag2d\dataset\Label.h"
 					>
 				</File>
+				<File
+					RelativePath="..\..\..\src\drag2d\dataset\WXRender.cpp"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\src\drag2d\dataset\WXRender.h"
+					>
+				</File>
 			</Filter>
 		</Filter>
 		<Filter
