[FIXED] 存文件，路径有中文，存不上

--- a/drag2d/platform/msvc2008/projects/libdrag2d.vcproj
+++ b/drag2d/platform/msvc2008/projects/libdrag2d.vcproj
@@ -938,6 +938,14 @@
 				>
 			</File>
 			<File
+				RelativePath="..\..\..\src\drag2d\render\ShaderNew.cpp"
+				>
+			</File>
+			<File
+				RelativePath="..\..\..\src\drag2d\render\ShaderNew.h"
+				>
+			</File>
+			<File
 				RelativePath="..\..\..\src\drag2d\render\ShapeStyle.h"
 				>
 			</File>
