[ADDED] 只缩放json文件的命令行

--- a/easydb/platform/msvc2008/projects/easydb_cl.vcproj
+++ b/easydb/platform/msvc2008/projects/easydb_cl.vcproj
@@ -311,6 +311,14 @@
 				>
 			</File>
 			<File
+				RelativePath="..\..\..\src\easydb\ScaleJson.cpp"
+				>
+			</File>
+			<File
+				RelativePath="..\..\..\src\easydb\ScaleJson.h"
+				>
+			</File>
+			<File
 				RelativePath="..\..\..\src\easydb\ScaleOverall.cpp"
 				>
 			</File>
