--- a/easymesh/platform/msvc2008/projects/easymesh.vcproj
+++ b/easymesh/platform/msvc2008/projects/easymesh.vcproj
@@ -182,6 +182,14 @@
 	</References>
 	<Files>
 		<File
+			RelativePath="..\..\..\src\easymesh\Frame.cpp"
+			>
+		</File>
+		<File
+			RelativePath="..\..\..\src\easymesh\Frame.h"
+			>
+		</File>
+		<File
 			RelativePath="..\..\..\src\easymesh\main.cpp"
 			>
 		</File>
