[ADDED] easydb增加格式字符串命令

--- a/easydb/platform/msvc2008/projects/easydb_cl.vcproj
+++ b/easydb/platform/msvc2008/projects/easydb_cl.vcproj
@@ -295,6 +295,14 @@
 				>
 			</File>
 			<File
+				RelativePath="..\..\..\src\easydb\FormatTIDString.cpp"
+				>
+			</File>
+			<File
+				RelativePath="..\..\..\src\easydb\FormatTIDString.h"
+				>
+			</File>
+			<File
 				RelativePath="..\..\..\src\easydb\PackParticle3D.cpp"
 				>
 			</File>
