[ADDED] mesh调整，用于组合complex

--- a/easymesh/platform/msvc2008/projects/libmesh.vcproj
+++ b/easymesh/platform/msvc2008/projects/libmesh.vcproj
@@ -260,6 +260,14 @@
 					>
 				</File>
 				<File
+					RelativePath="..\..\..\src\libmesh\ShapeFactory.cpp"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\src\libmesh\ShapeFactory.h"
+					>
+				</File>
+				<File
 					RelativePath="..\..\..\src\libmesh\Triangle.h"
 					>
 				</File>
