--- a/drag2d/platform/msvc2008/projects/libdrag2d.vcproj
+++ b/drag2d/platform/msvc2008/projects/libdrag2d.vcproj
@@ -420,6 +420,14 @@
 					RelativePath="..\..\..\src\drag2d\history\ArrangeSpriteAtomicOP.h"
 					>
 				</File>
+				<File
+					RelativePath="..\..\..\src\drag2d\history\OffsetSpriteAOP.cpp"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\src\drag2d\history\OffsetSpriteAOP.h"
+					>
+				</File>
 			</Filter>
 			<Filter
 				Name="other"
