[CHANGED] 重构for ArrangeSpriteOp to ArrangeSpriteImpl

--- a/easypacker/platform/msvc2008/projects/easypacker.vcproj
+++ b/easypacker/platform/msvc2008/projects/easypacker.vcproj
@@ -274,14 +274,6 @@
 			Name="stage"
 			>
 			<File
-				RelativePath="..\..\..\src\easypacker\ArrangeSpriteOP.cpp"
-				>
-			</File>
-			<File
-				RelativePath="..\..\..\src\easypacker\ArrangeSpriteOP.h"
-				>
-			</File>
-			<File
 				RelativePath="..\..\..\src\easypacker\StageCanvas.cpp"
 				>
 			</File>
@@ -381,6 +373,26 @@
 					</File>
 				</Filter>
 			</Filter>
+		</Filter>
+		<Filter
+			Name="editop"
+			>
+			<File
+				RelativePath="..\..\..\src\easypacker\ArrangeSpriteImpl.cpp"
+				>
+			</File>
+			<File
+				RelativePath="..\..\..\src\easypacker\ArrangeSpriteImpl.h"
+				>
+			</File>
+			<File
+				RelativePath="..\..\..\src\easypacker\ArrangeSpriteOP.cpp"
+				>
+			</File>
+			<File
+				RelativePath="..\..\..\src\easypacker\ArrangeSpriteOP.h"
+				>
+			</File>
 		</Filter>
 		<File
 			RelativePath="..\..\..\..\easybuilder\platform\msvc2008\ebuilder.rc"
