--- a/easyscale9/platform/msvc2008/projects/easyscale9.vcproj
+++ b/easyscale9/platform/msvc2008/projects/easyscale9.vcproj
@@ -216,6 +216,14 @@
 				Name="compose"
 				>
 				<File
+					RelativePath="..\..\..\src\easyscale9\ComposeImpl.cpp"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\src\easyscale9\ComposeImpl.h"
+					>
+				</File>
+				<File
 					RelativePath="..\..\..\src\easyscale9\ComposeOP.cpp"
 					>
 				</File>
