[ADDED] font sprite编辑框

--- a/drag2d/platform/msvc2008/projects/libdrag2d.vcproj
+++ b/drag2d/platform/msvc2008/projects/libdrag2d.vcproj
@@ -1776,6 +1776,14 @@
 					RelativePath="..\..\..\src\drag2d\view\FinishDialog.h"
 					>
 				</File>
+				<File
+					RelativePath="..\..\..\src\drag2d\view\TextDialog.cpp"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\src\drag2d\view\TextDialog.h"
+					>
+				</File>
 			</Filter>
 			<Filter
 				Name="frame"
