--- a/drag2d/platform/msvc2008/projects/libdrag2d.vcproj
+++ b/drag2d/platform/msvc2008/projects/libdrag2d.vcproj
@@ -910,30 +910,6 @@
 				>
 			</File>
 			<File
-				RelativePath="..\..\..\src\drag2d\render\DynamicFont.cpp"
-				>
-			</File>
-			<File
-				RelativePath="..\..\..\src\drag2d\render\DynamicFont.h"
-				>
-			</File>
-			<File
-				RelativePath="..\..\..\src\drag2d\render\DynamicPacker.cpp"
-				>
-			</File>
-			<File
-				RelativePath="..\..\..\src\drag2d\render\DynamicPacker.h"
-				>
-			</File>
-			<File
-				RelativePath="..\..\..\src\drag2d\render\DynamicTexture.cpp"
-				>
-			</File>
-			<File
-				RelativePath="..\..\..\src\drag2d\render\DynamicTexture.h"
-				>
-			</File>
-			<File
 				RelativePath="..\..\..\src\drag2d\render\GL10.cpp"
 				>
 			</File>
@@ -1086,6 +1062,42 @@
 				</File>
 				<File
 					RelativePath="..\..\..\src\drag2d\render\SpriteDraw.h"
+					>
+				</File>
+			</Filter>
+			<Filter
+				Name="dynamic_packer"
+				>
+				<File
+					RelativePath="..\..\..\src\drag2d\render\DynamicFont.cpp"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\src\drag2d\render\DynamicFont.h"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\src\drag2d\render\DynamicPacker.cpp"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\src\drag2d\render\DynamicPacker.h"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\src\drag2d\render\DynamicTexAndFont.cpp"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\src\drag2d\render\DynamicTexAndFont.h"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\src\drag2d\render\DynamicTexture.cpp"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\src\drag2d\render\DynamicTexture.h"
 					>
 				</File>
 			</Filter>
