--- a/easyparticle3d/platform/msvc2008/projects/libparticle3d.vcproj
+++ b/easyparticle3d/platform/msvc2008/projects/libparticle3d.vcproj
@@ -272,6 +272,14 @@
 				Name="library"
 				>
 				<File
+					RelativePath="..\..\..\src\libparticle3d\LibraryPage.cpp"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\src\libparticle3d\LibraryPage.h"
+					>
+				</File>
+				<File
 					RelativePath="..\..\..\src\libparticle3d\LibraryPanel.cpp"
 					>
 				</File>
@@ -281,6 +289,10 @@
 				</File>
 			</Filter>
 		</Filter>
+		<File
+			RelativePath="..\..\..\src\libparticle3d\config.h"
+			>
+		</File>
 	</Files>
 	<Globals>
 	</Globals>
