[ADDED] library的拖拽文件

--- a/drag2d/platform/msvc2008/projects/libdrag2d.vcproj
+++ b/drag2d/platform/msvc2008/projects/libdrag2d.vcproj
@@ -1573,6 +1573,14 @@
 					>
 				</File>
 				<File
+					RelativePath="..\..\..\src\drag2d\view\LibraryDropTarget.cpp"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\src\drag2d\view\LibraryDropTarget.h"
+					>
+				</File>
+				<File
 					RelativePath="..\..\..\src\drag2d\view\LibraryList.cpp"
 					>
 				</File>
