[CHANGED] library读取配置文件的方式

--- a/drag2d/platform/msvc2008/projects/libdrag2d.vcproj
+++ b/drag2d/platform/msvc2008/projects/libdrag2d.vcproj
@@ -1529,7 +1529,15 @@
 				Name="settings"
 				>
 				<File
-					RelativePath="..\..\..\src\drag2d\common\config.h"
+					RelativePath="..\..\..\src\drag2d\common\Config.cpp"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\src\drag2d\common\Config.h"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\src\drag2d\common\const.h"
 					>
 				</File>
 				<File
