--- a/drag2d/platform/msvc2008/projects/libdrag2d.vcproj
+++ b/drag2d/platform/msvc2008/projects/libdrag2d.vcproj
@@ -2045,6 +2045,10 @@
 				Name="list"
 				>
 				<File
+					RelativePath="..\..\..\src\drag2d\widgets\ListItem.cpp"
+					>
+				</File>
+				<File
 					RelativePath="..\..\..\src\drag2d\widgets\ListItem.h"
 					>
 				</File>
